--- a/app/assets/stylesheets/photo/index.scss
+++ b/app/assets/stylesheets/photo/index.scss
@@ -11,5 +11,17 @@
   .main-contents{
     background: lightblue;
     width: 80%;
+    overflow: scroll;
+  }
+}
+
+.nav-bar{
+  background-color: lightcoral;
+  .notice{
+    font-size: 15px;
+    text-align: center;
+  }
+  .alert{
+    text-align: center;
   }
 }
