--- a/app/assets/stylesheets/shared/main.css
+++ b/app/assets/stylesheets/shared/main.css
@@ -1,27 +1,37 @@
 .card {
-  width: 200px;
-  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 90%;
+}
+
+.card .card-box {
+  min-width: 200px;
+  min-height: 200px;
+  margin: 10px;
   background: #fff;
-  border-radius: 5px;
-  -webkit-box-shadow: 10px 10px blue;
-          box-shadow: 10px 10px blue;
-  margin: 40px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 2px 5px red;
+          box-shadow: 0 2px 5px red;
 }
 
-.card .card-img {
-  border-radius: 5px 5px 0 0;
-  max-width: 100%;
-  height: 60%;
+.card .card-box .card-content {
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  background: center;
+  border-radius: 10px;
 }
 
-.card .card-content {
-  padding: 20px;
-}
-
-.card .card-content .card-text {
+.card .card-box .card-users, .card .card-box .card-introduction, .card .card-box .card-link {
   text-align: center;
-}
-
-.nav-bar {
-  background-color: khaki;
 }
