--- a/app/assets/stylesheets/shared/main.scss
+++ b/app/assets/stylesheets/shared/main.scss
@@ -1,26 +1,26 @@
 .card{
-  width: 200px;
-  height: 200px;
-  background: #fff;
-  border-radius: 5px;
-  box-shadow: 10px 10px blue;
-  margin: 40px;
-  
-  .card-img {
-    border-radius: 5px 5px 0 0;
-    max-width: 100%;
-    height: 60%;
-  }  
-
-  .card-content {
-    padding: 20px;
-
-    .card-text{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  width: 90%;
+  .card-box{
+    min-width: 200px;
+    min-height: 200px;
+    margin: 10px;
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px red;
+    .card-content {
+      width: 100%;
+      height: 200px;
+      background-size: cover;
+      background: center;
+      border-radius: 10px;
+    }
+    .card-users,.card-introduction,.card-link{
       text-align: center;
     }
   }
 }
 
-.nav-bar{
-  background-color: khaki;
-}
