--- a/app/assets/stylesheets/photo/index.css
+++ b/app/assets/stylesheets/photo/index.css
@@ -4,11 +4,14 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background: lightblue;
 }
 
 .sunrise-main .side-bar {
   background: green;
   width: 20%;
+  border-radius: 10px;
+  margin: 20px;
 }
 
 .sunrise-main .main-contents {
@@ -19,6 +22,9 @@
 
 .nav-bar {
   background-color: lightcoral;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 2px 5px red;
+          box-shadow: 0 2px 5px red;
 }
 
 .nav-bar .notice {
