--- a/app/assets/stylesheets/photo/index.css
+++ b/app/assets/stylesheets/photo/index.css
@@ -4,7 +4,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: lightblue;
+  background-image: url("https://images.unsplash.com/photo-1531363160582-773c8a0c7de0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
+  background-position: center;
+  background-size: cover;
 }
 
 .sunrise-main .side-bar {
@@ -15,7 +17,6 @@
 }
 
 .sunrise-main .main-contents {
-  background: lightblue;
   width: 80%;
   overflow: scroll;
 }
