--- a/app/assets/stylesheets/photo/index.scss
+++ b/app/assets/stylesheets/photo/index.scss
@@ -2,8 +2,9 @@
   height:100vh;
   width: 100vw;
   display: flex;
-  background: lightblue;
-  
+  background-image:url('https://images.unsplash.com/photo-1531363160582-773c8a0c7de0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-position: center;
+  background-size: cover;
   .side-bar{
     background:green;
     width: 20%;
@@ -12,7 +13,6 @@
   }
   
   .main-contents{
-    background: lightblue;
     width: 80%;
     overflow: scroll;
   }
