--- a/app/assets/stylesheets/shared/main.scss
+++ b/app/assets/stylesheets/shared/main.scss
@@ -1,26 +1,28 @@
-.card{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  width: 90%;
-  .card-box{
-    min-width: 200px;
-    min-height: 200px;
-    margin: 10px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px red;
-    .card-content {
-      width: 100%;
-      height: 200px;
-      background-size: cover;
-      background: center;
+.sunrise-main{
+ 
+  .card{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 90%;
+    .card-box{
+      min-width: 150px;
+      min-height: 100px;
+      margin: 10px;
+      background: #fff;
       border-radius: 10px;
-    }
-    .card-users,.card-introduction,.card-link{
-      text-align: center;
+      box-shadow: 0 2px 5px red;
+      .card-content {
+        width: 100%;
+        height: 150px;
+        background-size: cover;
+        background: center;
+        border-radius: 10px;
+      }
+      .card-users,.card-introduction,.card-link{
+        text-align: center;
+      }
     }
   }
 }
-
