--- a/app/assets/stylesheets/user/sign_up.css
+++ b/app/assets/stylesheets/user/sign_up.css
@@ -10,7 +10,9 @@
   margin: 60px auto 0;
   border-radius: 8px;
   border: 1px #ddd solid;
-  background-color: ivory;
+  background-image: url("https://images.unsplash.com/photo-1517475452665-4e6898befa13?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1941&q=80");
+  background-position: center;
+  background-size: cover;
 }
 
 .box .box-inner {
